--- a/index.html
+++ b/index.html
@@ -541,8 +541,7 @@
           <div class="info">
             <h3>Project info:</h3>
             <ul>
-              <li>Data - <span class="pp-project-date">Project Date</span></li>
-              <li>Client - <span class="pp-project-client">Project Client</span></li>
+              <li>Date - <span class="pp-project-date">Project Date</span></li>
               <li>Tools - <span class="pp-project-tools">Project Tools</span></li>
             </ul>
           </div>
